<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">testGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="up">up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="inventory">Inventory</string>
    <string name="character">Character</string>
    <string name="achievement">Achievement</string>
    <string name="configuration">Configuration</string>
    <string name="title_activity_achievement">AchievementActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="resume">Resume</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_battle">BattleActivity</string>
    <string name="title_activity_credit">CreditActivity</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="credit">Credit</string>

</resources>
