<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >
            <Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
            <Button
                android:id="@+id/load"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/load" />
            <Button
                android:id="@+id/exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
            <Button
                android:id="@+id/resume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/resume" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>