<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SaveActivity" >

    <Button
        android:id="@+id/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="Game" />

    <Button
        android:id="@+id/loadMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/game"
        android:layout_below="@+id/game"
        android:layout_marginTop="20dp"
        android:text="@string/load" />

    <Button
        android:id="@+id/achievementMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loadMenu"
        android:layout_below="@+id/loadMenu"
        android:layout_marginTop="24dp"
        android:text="@string/achievement" />

    <Button
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/game"
        android:layout_below="@+id/achievementMenu"
        android:layout_marginTop="28dp"
        android:text="@string/credit" />

</RelativeLayout>
